# async-task-worker

./: .coveragerc  HOWTO.md  README.md  main.py  pyproject.toml
.github/: RELEASE.md  renovate.json
.github/workflows/: build-test.yml  release-pypi.yml
docs/: AsyncTaskWorker Class Diagram.mmd  AsyncTaskWorker Sequence Diagram.mmd  EventManager Sequence Diagram.mmd  Task Cache Sequence Diagram.mmd  Task Registry Sequence Diagram.mmd  Task Worker API Sequence Diagram.mmd
examples/: async_cache_example.py  redis_cache_example.py
src/async_cache/: __init__.py  core.py  exceptions.py  key_utils.py  serialization.py
src/async_cache/adapters/: __init__.py  memory.py  redis.py
src/async_events/: __init__.py  event_manager.py  sse_client.py
src/async_task_worker/: __init__.py  api.py  core.py  exceptions.py  executor.py  futures.py  pool.py  queue.py  registry.py  status.py  task_cache.py  task_worker.py
src/async_task_worker/adapters/: __init__.py  cache_adapter.py
src/task_worker/: __init__.py  task_cache.py  task_registry.py  task_worker.py  task_worker_api.py
tests/: conftest.py  setup_logging.py  stress_test.py  test_async_cache.py  test_async_events.py  test_cache_adapter.py  test_task_cache.py  test_task_registry.py  test_task_worker.py  test_task_worker_api.py
