[project]
name = "task-worker"
version = "0.1.0"
description = "Async Test Worker"
authors = [
    { name = "Ove Ranheim", email = "oranheim@gmail.com" }
]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["asyncio", "worker", "task", "processor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.hatch.build]
exclude = [
  "docs/*",
  "examples/*",
  "tests/*",
  ".github/*",
  "*.gif",
  "*.png",
  "dist/*",
  "build/*",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "*.pyc"
]

[project.urls]
Homepage = "https://github.com/descoped/task-worker"
Repository = "https://github.com/descoped/task-worker"
Issues = "https://github.com/descoped/task-worker/issues"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
