[project]
name = "async-task-worker"
version = "0.5.0"
description = "Async Test Worker"
authors = [
    { name = "Ove Ranheim", email = "oranheim@gmail.com" }
]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["asyncio", "worker", "task", "processor", "cache"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "msgpack>=1.1.0",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "fastapi>=0.115.12",
    "pyyaml>=6.0.2",
    "redis>=6.1.0",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_events", "src/async_task_worker", "src/async_cache"]

[tool.hatch.build]
exclude = [
    "docs/*",
    "examples/*",
    "tests/*",
    ".github/*",
    "*.gif",
    "*.png",
    "dist/*",
    "build/*",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "*.pyc"
]

[project.urls]
Homepage = "https://github.com/descoped/async-task-worker"
Repository = "https://github.com/descoped/async-task-worker"
Issues = "https://github.com/descoped/async-task-worker/issues"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"


[tool.ruff]
# Target Python 3.11+
target-version = "py311"
# Modern line length for readability
line-length = 120
# Include all Python files
include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
# Only select rules that catch real errors/bugs that should block builds
select = [
    "E9",    # Runtime errors (syntax errors, indentation errors)
    "F63",   # Invalid print syntax
    "F7",    # Syntax errors
    "I",     # Import sorting
]

# Ignore common architectural patterns and forward references
ignore = [
    "E402",   # Module level import not at top (needed for circular import avoidance)
    "E501",   # Line length (handled by formatter)
    "E722",   # Bare except (sometimes intentional)
    "F821",   # Undefined name (forward references in type annotations)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files can have unused imports
"tests/*" = ["F401"]
# Examples can be more relaxed
"examples/*" = ["F401", "F841"]

[tool.ruff.lint.isort]
# Group imports cleanly
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
